<resources>
    <string name="app_name">Fitoryx</string>
    <string name="firebase_client_id">834000347132-ttgss8vq3n52jg27l3modmopmvlgkti5.apps.googleusercontent.com</string>
    <!--  Appbar + Pages  -->
    <string name="title_workout">Workouts</string>
    <string name="title_exercise">Exercises</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <!--  ExerciseFilter  -->
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="equipment">Equipment</string>
    <string name="clear_filters">Clear filters</string>
    <!--  Auth  -->
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_to_continue_to_fitoryx">Sign in to continue to Fitoryx</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="need_an_account">Need an account?</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="create_an_account_to_get_started">Create an account to get started</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign out</string>
    <string name="ok">Okay</string>
    <!-- Errors -->
    <string name="google_sign_in_failed">Sign in with Google failed %1$s</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_title">Error</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_exercise_name_empty">Exercise name is required</string>
    <string name="error_save_exercise">Failed to save exercise</string>
    <string name="error_delete_exercise">Failed to delete exercise</string>

    <string name="close">Close</string>
    <string name="search_exercises">Search exercises…</string>
    <string name="title_filter">Filter</string>
    <string name="title_custom_exercise_add">Create exercise</string>
    <string name="title_exercise_detail">Exercise detail</string>
    <string name="title_custom_exercise_edit">Edit exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="none">None</string>
    <string name="save">Save</string>
    <string name="add_exercise">Add exercise</string>
    <string name="message_exercise_saved">Exercise saved!</string>
    <string name="message_exercise_edited">Exercise updated!</string>
    <string name="saving">Saving…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_exercise_title">Delete Exercise</string>
    <string name="delete_exercise_message">Are you sure you want to delete this exercise?</string>
    <string name="cancel">Cancel</string>
    <string name="message_exercise_deleted">Exercise deleted!</string>
    <string name="title_create_workout">Create workout</string>
    <string name="title_workout_exercises">Exercises</string>
</resources>