<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_nutrition"
        android:icon="@drawable/ic_nutrition"
        android:title="@string/title_nutrition" />

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_add"
        android:title="@string/title_workout" />

    <item
        android:id="@+id/exerciseGraph"
        android:icon="@drawable/ic_exercise"
        android:title="@string/title_exercise" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>