<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workout">

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.tomtruyen.Fitoryx.ui.workout.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.tomtruyen.Fitoryx.ui.exercise.ExerciseFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" >
        <action
            android:id="@+id/action_exercises_to_filter"
            app:destination="@id/exerciseFilterActivity" />
        <action
            android:id="@+id/action_exercises_to_custom"
            app:destination="@id/customExerciseActivity" />
        <action
            android:id="@+id/action_exercises_to_detail"
            app:destination="@id/exerciseDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_nutrition"
        android:name="com.tomtruyen.Fitoryx.ui.nutrition.NutritionFragment"
        android:label="@string/title_nutrition"
        tools:layout="@layout/fragment_nutrition" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tomtruyen.Fitoryx.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.tomtruyen.Fitoryx.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <activity
        android:id="@+id/exerciseFilterActivity"
        android:name="com.tomtruyen.Fitoryx.ui.exercise.filter.ExerciseFilterActivity"
        android:label="@string/title_filter"
        tools:layout="@layout/activity_exercise_filter" />
    <activity
        android:id="@+id/customExerciseActivity"
        android:name="com.tomtruyen.Fitoryx.ui.exercise.custom.CustomExerciseActivity"
        android:label="@string/title_custom_exercise_add"
        tools:layout="@layout/activity_custom_exercise" />
    <activity
        android:id="@+id/exerciseDetailActivity"
        android:name="com.tomtruyen.Fitoryx.ui.exercise.detail.ExerciseDetailActivity"
        android:label="@string/title_exercise_detail"
        tools:layout="@layout/activity_exercise_detail" />
</navigation>