<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.authentication.RegisterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="32sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_to_get_started"
        android:textSize="16sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:singleLine="true"
            android:padding="@dimen/text_input_edit_text_with_hint_padding"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/password"
            android:singleLine="true"
            android:padding="@dimen/text_input_edit_text_with_hint_padding"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.tomtruyen.android.material.loadingbutton.LoadingButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:LoadingButton_text="@string/sign_up"
        app:LoadingButton_textColor="@color/white"
        app:LoadingButton_indicatorColor="@color/white"
        app:LoadingButton_indicatorSize="32dp"
        app:LoadingButton_indicatorThickness="2dp"
        app:LoadingButton_indeterminate="true"
        />


    <TextView
        android:id="@+id/login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_ripple"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:clickable="true"
        android:text="@string/already_have_an_account"
        android:textColor="@color/blue_200"
        />

</LinearLayout>